bugs squashed
• Fixed still being able to play after win conditions met.
• Improved player name parsing to lowercase() all non-initial characters in each word.

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -146,7 +146,7 @@ a:visited {
 }
 
 .circle-taken::after {
-    background: radial-gradient(circle at 50% 40%, transparent 30%, rgba(0,0,0,.20));
+    background: radial-gradient(circle at 50% 40%, transparent 30%, rgba(0,0,0,.35));
     transform: scale(.9);
     border: white 1 solid;
     border-bottom: none;
